// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden examples > accumulator > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t3",
              "type": "virtual",
            },
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "accumulator",
    "wires": [
      [
        1,
        4,
        1,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > adder > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t1",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t3",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t2",
              "type": "virtual",
            },
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "adder",
    "wires": [],
  },
}
`;

exports[`golden examples > catalog_latch > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 1,
                    "index": 1,
                    "name": "recipe-A",
                    "type": "virtual",
                  },
                  {
                    "count": 2,
                    "index": 2,
                    "name": "recipe-B",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "constant-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "=",
                "constant": 0,
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
              },
              {
                "comparator": "=",
                "compare_type": "and",
                "first_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": true,
                  "red": false,
                },
                "second_signal": {
                  "name": "recipe-A",
                  "type": "virtual",
                },
                "second_signal_networks": {
                  "green": true,
                  "red": false,
                },
              },
              {
                "comparator": "<",
                "compare_type": "or",
                "constant": 10,
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
              },
              {
                "comparator": ">",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "recipe-A",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
              },
              {
                "comparator": "=",
                "compare_type": "and",
                "first_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": true,
                  "red": false,
                },
                "second_signal": {
                  "name": "recipe-A",
                  "type": "virtual",
                },
                "second_signal_networks": {
                  "green": true,
                  "red": false,
                },
              },
              {
                "comparator": "=",
                "compare_type": "or",
                "constant": 0,
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
              },
              {
                "comparator": "=",
                "compare_type": "and",
                "first_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": true,
                  "red": false,
                },
                "second_signal": {
                  "name": "recipe-B",
                  "type": "virtual",
                },
                "second_signal_networks": {
                  "green": true,
                  "red": false,
                },
              },
              {
                "comparator": "<",
                "compare_type": "or",
                "constant": 10,
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
              },
              {
                "comparator": ">",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "recipe-B",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": false,
                  "red": true,
                },
              },
              {
                "comparator": "=",
                "compare_type": "and",
                "first_signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
                "first_signal_networks": {
                  "green": true,
                  "red": false,
                },
                "second_signal": {
                  "name": "recipe-B",
                  "type": "virtual",
                },
                "second_signal_networks": {
                  "green": true,
                  "red": false,
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "copy_count_from_input": false,
                "signal": {
                  "name": "signal-each",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 2,
        "name": "decider-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "catalog_latch",
    "wires": [
      [
        1,
        2,
        2,
        2,
      ],
      [
        2,
        3,
        2,
        1,
      ],
    ],
  },
}
`;

exports[`golden examples > clamp > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": ">",
                "constant": 100,
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 100,
                "signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "signal-each",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t11",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 2,
        "name": "arithmetic-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "clamp",
    "wires": [
      [
        1,
        4,
        2,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > comparison-chain > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "<",
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
                "second_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
              {
                "comparator": "<",
                "compare_type": "and",
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
                "second_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "comparison-chain",
    "wires": [],
  },
}
`;

exports[`golden examples > conditional-counter > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t8__d",
              "type": "virtual",
            },
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "constant": -1,
                "signal": {
                  "name": "__t8__d",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t8__d",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 2,
        "name": "decider-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "conditional-counter",
    "wires": [
      [
        2,
        4,
        1,
        2,
      ],
      [
        1,
        4,
        1,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > counter > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_constant": 1,
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "counter",
    "wires": [
      [
        1,
        4,
        1,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > for_sum > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t4",
              "type": "virtual",
            },
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t4",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t4",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t16__d",
              "type": "virtual",
            },
          },
        },
        "entity_number": 2,
        "name": "arithmetic-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t8",
                  "type": "virtual",
                },
              },
              {
                "comparator": "≤",
                "compare_type": "and",
                "constant": 10,
                "first_signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t8",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 3,
        "name": "decider-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t8",
                  "type": "virtual",
                },
              },
              {
                "comparator": "≤",
                "compare_type": "and",
                "constant": 10,
                "first_signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 4,
        "name": "decider-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t8",
                  "type": "virtual",
                },
              },
              {
                "comparator": "≤",
                "compare_type": "and",
                "constant": 10,
                "first_signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t16__d",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 5,
        "name": "decider-combinator",
        "position": {
          "x": 8,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 1,
                    "index": 1,
                    "name": "__t3",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 6,
        "name": "constant-combinator",
        "position": {
          "x": 10,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "for_sum",
    "wires": [
      [
        3,
        4,
        4,
        2,
      ],
      [
        2,
        4,
        4,
        2,
      ],
      [
        4,
        4,
        1,
        2,
      ],
      [
        1,
        4,
        1,
        2,
      ],
      [
        3,
        4,
        5,
        2,
      ],
      [
        2,
        4,
        5,
        2,
      ],
      [
        5,
        4,
        2,
        2,
      ],
      [
        2,
        4,
        2,
        2,
      ],
      [
        6,
        2,
        2,
        2,
      ],
      [
        3,
        4,
        3,
        2,
      ],
      [
        2,
        4,
        3,
        2,
      ],
      [
        6,
        2,
        3,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > mux > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": ">",
                "constant": 0,
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
              },
              {
                "comparator": "≠",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "signal-each",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t8",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 2,
        "name": "arithmetic-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "mux",
    "wires": [
      [
        1,
        4,
        2,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > or_flags > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": ">",
                "constant": 0,
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
              },
              {
                "comparator": ">",
                "compare_type": "or",
                "constant": 0,
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "or_flags",
    "wires": [],
  },
}
`;

exports[`golden examples > signal_count > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "count_signal": {
            "name": "__t4",
            "type": "virtual",
          },
          "operation": "count",
        },
        "entity_number": 1,
        "name": "selector-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "signal_count",
    "wires": [],
  },
}
`;

exports[`golden examples > sr_latch > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
              {
                "comparator": "=",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
              {
                "comparator": "≠",
                "compare_type": "or",
                "constant": 0,
                "first_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
              {
                "comparator": "=",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "sr_latch",
    "wires": [
      [
        1,
        4,
        1,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > while_count > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t11__d",
              "type": "virtual",
            },
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
              {
                "comparator": "<",
                "compare_type": "and",
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
                "second_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 2,
        "name": "decider-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
              {
                "comparator": "<",
                "compare_type": "and",
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
                "second_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t11__d",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 3,
        "name": "decider-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 1,
                    "index": 1,
                    "name": "__t4",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 4,
        "name": "constant-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "while_count",
    "wires": [
      [
        2,
        4,
        3,
        2,
      ],
      [
        1,
        4,
        3,
        2,
      ],
      [
        3,
        4,
        1,
        2,
      ],
      [
        1,
        4,
        1,
        2,
      ],
      [
        2,
        4,
        2,
        2,
      ],
      [
        1,
        4,
        2,
        2,
      ],
      [
        4,
        2,
        2,
        2,
      ],
    ],
  },
}
`;
